syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

import "io/harness/callback/http_entrypoint.proto";
import "io/harness/perpetualtask/perpetual_task.proto";

message TaskClientParams {
  map<string, string> params = 1;
}

message PerpetualTaskClientContextDetails {
  oneof parameters {
    TaskClientParams task_client_params = 1;
    PerpetualTaskExecutionBundle execution_bundle = 2;
  }
  google.protobuf.Timestamp last_context_updated = 3;
}

// TODO: define what is needed to make a callback to the client entry-point
message PerpetualTaskClientEntrypoint {
  oneof entrypoints {
    callback.HttpsClientEntrypoint https_entrypoint = 1;
  }
}
